crates/obzenflow_runtime/tests/compile_fail/stateful_output_product_carrier.stderr
error[E0277]: `Product` cannot be an effectful stateful `Output`: it does not commit exactly one fact per value
  --> tests/compile_fail/stateful_output_product_carrier.rs:43:19
   |
43 |     type Output = Product;
   |                   ^^^^^^^ unsatisfied trait bound
   |
help: the trait `TypedPayload` is not implemented for `Product`
  --> tests/compile_fail/stateful_output_product_carrier.rs:31:1
   |
31 | struct Product {
   | ^^^^^^^^^^^^^^
   = note: `apply` folds one committed fact per call, so the stateful `Output` must be a per-fact sum (an enum with one fact per variant) or a single `TypedPayload`; a product carrier commits several facts at once and cannot fold one at a time (FLOWIP-120z)
   = help: the following other types implement trait `TypedPayload`:
             AiMapReduceChunkFailed
             AiMapReducePlanningManifest
             AiMapReduceReduceInput<Seed, Collected>
             AiMapReduceTaggedPartial<T>
             ChunkEnvelope<T>
             First
             Input
             Many<T>
             Second
   = note: required for `Product` to implement `OneFactStageOutput`
note: required by a bound in `obzenflow_runtime::stages::EffectfulStatefulHandler::Output`
  --> src/stages/common/handlers/stateful/traits.rs
   |
   |     type Output: obzenflow_core::OneFactStageOutput + Send + Sync + 'static;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EffectfulStatefulHandler::Output`
